# Trader

./: .env.template  .gitignore  pyproject.toml  requirements.txt
experiment/: lstm_optuna.py
notebooks/: notebook.ipynb
scripts/: download_crypto_history.py  download_sentiment.py
src/trader/: __init__.py
src/trader/backtest/: switching.py
src/trader/data_gathering/: __init__.py  binance_ohlc.py  fear_greed.py  google_trends.py
src/trader/dataset/: dataset.py
src/trader/ml/: __init__.py  data.py  models.py  torch_dataset.py  train.py
